--- a/movie_review_site/movie/templates/movie/home.html
+++ b/movie_review_site/movie/templates/movie/home.html
@@ -9,6 +9,12 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
   <style>
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
     .movie-card {
       transition: transform 0.3s ease;
     }
@@ -46,15 +52,21 @@
     <h1 class="text-center mb-5">Movie Reviews</h1>
     <div class="row">
       {% for movie in movies %}
-      <div class="col-md-6 mb-4">
-        <div class="card movie-card h-100">
-          <img src="{{ movie.image.url }}" class="card-img-top movie-image" alt="{{ movie.title }}">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title movie-title">{{ movie.title }}</h5>
-            <p class="card-text movie-meta">{{ movie.date }} | {{ movie.author }}</p>
-            <p class="card-text movie-description">{{ movie.description }}</p>
-            <div class="mt-auto">
-              <a href="#" class="btn btn-primary">Read More</a>
+      <div class="col-md-11 offset-md-1 mb-4">
+        <div class="card h-100">
+          <div class="d-flex">
+            <div class="image-card">
+              <img src="{{ movie.image.url }}" class="movie-image" alt="{{ movie.title }}"
+                style="width: 350px; height: 400px;" />
+            </div>
+            <div class="card-body d-flex flex-column flex-grow-1">
+              <a href="{% url 'detail' movie.id %}" class="text-decoration-none">
+                <h5 class="card-title movie-title">
+                  {{ movie.title }}
+                </h5>
+              </a>
+              <p class="card-text movie-meta">{{ movie.date }} | {{ movie.author }}</p>
+              <p class="card-text movie-description">{{ movie.description }}</p>
             </div>
           </div>
         </div>
