--- a/movie_review_site/movie/templates/movie/detail.html
+++ b/movie_review_site/movie/templates/movie/detail.html
@@ -1,36 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+{% block title %}
+{{movie.title}}
+{% endblock title %}
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-</head>
+{% block content %}
 
-<body>
-  <div class="container my-6 py-4">
-    <div class="col-md-10 offset-md-1 mb-4">
-      <div class="card h-100">
-        <div class="d-flex">
-          <div class="card-image flex-shrink-0">
-            <img src="{{ movie.image.url }}" class="movie-image" alt="{{ movie.title }}"
-              style="width: 200px; height: auto;">
-          </div>
-          <div class="card-body d-flex flex-column flex-grow-1">
-            <h5 class="card-title movie-title">
-              {{ movie.title }}
-            </h5>
-            <p class="card-text movie-meta">{{ movie.date }} | {{ movie.author }}</p>
-            <p class="card-text movie-description">{{ movie.description }}</p>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="container block mx-auto md:flex gap-4 my-6 bg-gray-800 rounded-lg shadow-lg overflow-hidden">
+  <div class="">
+    <img src="{{ movie.image.url }}" class="aspect-w-4 movie-image max-w-full h-64 md:h-80 rounded-lg"
+      alt="{{ movie.title }}" />
   </div>
-</body>
+  <div class="flex-1 p-4 md:p-6 md:pt-4">
+    <a href="{% url 'detail' movie.id %}" class="">
+      <h5 class="text-3xl font-extrabold text-lime-300 hover:text-lime-400 transition-colors duration-300">
+        {{movie.title }}</h5>
+    </a>
+    <p class="text-blue-400 italic my-2">{{ movie.date }} | {{ movie.author }}</p>
+    <p class="text-gray-300">{{ movie.description }}</p>
+    {% if user.is_authenticated %}
+    <a href="{% url 'createreview' movie.id %}"
+      class="w-fit inline-block my-6 py-3 px-6 bg-gradient-to-r from-blue-500 to-blue-700 text-white font-bold rounded-md shadow-md hover:from-blue-600 hover:to-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 active:bg-blue-800">
+      Add Reviews
+    </a>
+    {% endif %}
+  </div>
+</div>
 
-</html>
+<div class="space-y-4 mt-6">
+  {% for review in reviews %}
+  <div class="bg-gray-700 rounded-lg p-4 shadow-md">
+    <h5 class="text-xl font-bold text-lime-300">
+      Review by {{ review.user.username }}
+    </h5>
+    <h6 class="text-sm text-blue-400 mb-2">
+      {{ review.date }}
+    </h6>
+    <p class="text-gray-300 mb-4">{{ review.review_text }}</p>
+    {% if user.is_authenticated and user == review.user %}
+    <div class="flex gap-2">
+      <a class="py-2 px-4 bg-gradient-to-r from-blue-500 to-blue-600 text-white font-bold rounded-lg shadow-lg hover:from-blue-600 hover:to-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 active:bg-blue-700 transition-transform transform hover:scale-105"
+        href="{% url 'updatereview' review.id %}">
+        Update
+      </a>
+      <a class="py-2 px-4 bg-gradient-to-r from-red-500 to-red-600 text-white font-bold rounded-lg shadow-lg hover:from-red-600 hover:to-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 active:bg-red-700 transition-transform transform hover:scale-105"
+        href="{% url 'deletereview' review.id %}">
+        Delete
+      </a>
+
+    </div>
+    {% endif %}
+  </div>
+  {% endfor %}
+</div>
+
+{% endblock content %}
