--- a/movie_review_site/movie/templates/movie/home.html
+++ b/movie_review_site/movie/templates/movie/home.html
@@ -1,79 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html'%}
+{% block title %}
+Movie Review Site
+{% endblock %}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movie Reviews</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-  <style>
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
+{% block content %}
 
-    .movie-card {
-      transition: transform 0.3s ease;
-    }
-
-    .movie-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    .movie-title {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-
-    .movie-meta {
-      font-size: 0.9rem;
-      color: #6c757d;
-    }
-
-    .movie-description {
-      font-size: 1rem;
-      line-height: 1.5;
-    }
-
-    .movie-image {
-      height: 300px;
-      object-fit: cover;
-      border-radius: 5px;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container my-5">
-    <h1 class="text-center mb-5">Movie Reviews</h1>
-    <div class="row">
-      {% for movie in movies %}
-      <div class="col-md-11 offset-md-1 mb-4">
-        <div class="card h-100">
-          <div class="d-flex">
-            <div class="image-card">
-              <img src="{{ movie.image.url }}" class="movie-image" alt="{{ movie.title }}"
-                style="width: 350px; height: 400px;" />
-            </div>
-            <div class="card-body d-flex flex-column flex-grow-1">
-              <a href="{% url 'detail' movie.id %}" class="text-decoration-none">
-                <h5 class="card-title movie-title">
-                  {{ movie.title }}
-                </h5>
-              </a>
-              <p class="card-text movie-meta">{{ movie.date }} | {{ movie.author }}</p>
-              <p class="card-text movie-description">{{ movie.description }}</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
+<div class="container mx-auto px-4 py-8 -my-10">
+  <h1 class="text-5xl font-extrabold text-lime-400 text-center my-12">Movie Reviews</h1>
+  {% for movie in movies %}
+  <div class="block md:flex gap-4 my-6 bg-gray-800 rounded-lg shadow-lg overflow-hidden">
+    <div class="">
+      <img src="{{ movie.image.url }}" class="aspect-w-4 movie-image max-w-full h-64 md:h-80 rounded-lg"
+        alt="{{ movie.title }}" />
+    </div>
+    <div class="flex-1 p-4 md:p-6 md:pt-4">
+      <a href="{% url 'detail' movie.id %}" class="">
+        <h5 class="text-3xl font-extrabold text-lime-300 hover:text-lime-400 transition-colors duration-300">
+          {{movie.title }}</h5>
+      </a>
+      <p class="text-blue-400 italic my-2">{{ movie.date }} | {{ movie.author }}</p>
+      <p class="text-gray-300">{{ movie.description }}</p>
     </div>
   </div>
-</body>
+  {% endfor %}
+</div>
 
-</html>
+{% endblock%}
