--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container mx-auto my-24 px-4">
-  <div class="max-w-md mx-auto bg-gray-950 text-white rounded-lg overflow-hidden shadow-md">
+  <div class="max-w-md mx-auto bg-gray-950 rounded-lg overflow-hidden shadow-md">
     <div class="px-6 py-4">
       <h2 class="text-2xl font-bold mb-2">Login</h2>
       {% if error %}
@@ -12,14 +12,14 @@
       <form method="POST" class="space-y-4">
         {% csrf_token %}
         <div>
-          <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
+          <label for="username" class="block text-sm font-medium text-gray-300">Username</label>
           <input type="text" id="username" name="username"
-            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+            class="mt-1 block w-full rounded-md shadow-sm bg-gray-800 text-gray-100">
         </div>
         <div>
-          <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+          <label for="password" class="block text-sm font-medium text-gray-300">Password</label>
           <input type="password" id="password" name="password"
-            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+            class="mt-1 block w-full rounded-md shadow-sm bg-gray-800 text-gray-100">
         </div>
         <div>
           <button type="submit"
