--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,18 +1,39 @@
-<!-- accounts/profile.html -->
+<!-- accounts/view_profile.html -->
 {% extends "base.html" %}
 
 {% block content %}
-<div class="max-w-md mx-12 mt-8">
-  <h2 class="text-2xl font-bold mb-4">Edit Profile</h2>
-  <form method="POST" enctype="multipart/form-data" class="space-y-4">
-    {% csrf_token %}
-    <div>
-      <label for="image" class="block text-gray-700 font-bold">Profile Image</label>
-      {{ form.image }}
+<div class="container mx-8 my-24 px-4">
+  <div class="max-w-md h-full pt-8 pb-16 bg-gray-950 rounded-lg overflow-hidden shadow-md">
+    <h2 class="text-2xl font-bold mb-2 text-center text-gray-100">Profile</h2>
+    <div class="px-6 py-4">
+      <div class="flex gap-6">
+        <div class="text-center">
+          {% if user_profile.image %}
+          <img src="{{ user_profile.image.url }}" alt="Profile Image"
+            class="w-32 h-32 mx-auto rounded-md border-2 border-gray-300 shadow-lg">
+          {% else %}
+          <img src="path/to/default-image.jpg" alt="Default Profile Image"
+            class="w-32 h-32 mx-auto rounded-md border-2 border-gray-300 shadow-lg">
+          {% endif %}
+        </div>
+        <div class="flex flex-col justify-center space-y-4">
+          <div>
+            <h3 class="text-lg font-medium text-indigo-400">Hobby</h3>
+            <p class="text-gray-100">{{ user_profile.hobby }}</p>
+          </div>
+          <div>
+            <h3 class="text-lg font-medium text-indigo-400">Favorite Movie Genre</h3>
+            <p class="text-gray-100">{{ user_profile.genre }}</p>
+          </div>
+          <div class="text-center">
+            <a href="{% url 'update_profile_image' %}"
+              class="w-full py-2 px-4 bg-blue-500 text-white font-semibold rounded-md shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 inline-block">
+              Edit Profile
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-      Save
-    </button>
-  </form>
+  </div>
 </div>
 {% endblock %}
